--- a/pages/navbar-top.html
+++ b/pages/navbar-top.html
@@ -3,7 +3,7 @@
     <div class="navbar navbar-default navbar-fixed-top center" role="navigation">
         <div class="container">                          
             <div class="navbar-header">             
-                <button id="navbarMap" type="button" class="navbar-toggle">
+                <button id="navbarMapSmall" type="button" class="navbar-toggle navbarMapSmall">
                         <i class="fa fa-map-marker fa-2x"></i>
                         <span class="btn-text landscape"><br/>Map</span>
                 </button> 
@@ -22,7 +22,7 @@
             </div>
             <div id="navMenu" class="navbar-collapse collapse">
                     <center>
-                        <button id="navbarMap" type="button" class="btn btn-default navbar-btn pull-right">
+                        <button id="navbarMapLarge" type="button" class="btn btn-default navbar-btn pull-right navbarMapLarge">
                             <i class="fa fa-map-marker fa-3x"></i>
                             <span class="btn-text landscape"><br/>Map</span>
                         </button>     
