--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       
-    <link rel="stylesheet" href="./css/style.min-530185de75.css">
+    <link rel="stylesheet" href="./css/style.min-16c8cb9357.css">
       
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -29,7 +29,11 @@
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
+    <!--
+    <script src="PushWooshNotification.js"></script>
+    -->
+    <script src="js/pushWooshHandler.js"></script>
     <!-- your app's js -->
-    <script src="./js/app.min-d526710328.js"></script>
+    <script src="./js/app.min-965bc25a26.js"></script>
   </body>
 </html>
