--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
       
-    <link rel="stylesheet" href="./css/style.min-530185de75.css">
+    <link rel="stylesheet" href="./css/style.min-da56999342.css">
+
       
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -29,7 +30,12 @@
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
+    <!--
+    <script src="PushWooshNotification.js"></script>
+    <script src="js/pushWooshHandler.js"></script>
+    -->
     <!-- your app's js -->
-    <script src="./js/app.min-d526710328.js"></script>
+    <script src="./js/app.min-57d3ecd49d.js"></script>
+
   </body>
 </html>
