--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view>Hello Version 5.2.0</ion-nav-view>
     <!--
     <script src="PushWooshNotification.js"></script>
     <script src="js/pushWooshHandler.js"></script>
