--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view>Hello Version 5.2.0</ion-nav-view>
+    <ion-nav-view></ion-nav-view>
     <!--
     <script src="PushWooshNotification.js"></script>
     <script src="js/pushWooshHandler.js"></script>
     -->
     <!-- your app's js -->
-    <script src="./js/app.min-57d3ecd49d.js"></script>
+    <script src="./js/app.min-2c473cf97c.js"></script>
 
   </body>
 </html>
