--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view>PhoneGap 5.2</ion-nav-view>
     <!--
     <script src="PushWooshNotification.js"></script>
     <script src="js/pushWooshHandler.js"></script>
     -->
     <!-- your app's js -->
-    <script src="./js/app.min-562954c626.js"></script>
+    <script src="./js/app.min-1ff9fab0be.js"></script>
 
   </body>
 </html>
