--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
-    <ion-nav-view>PhoneGap 5.2</ion-nav-view>
+    <ion-nav-view></ion-nav-view>
     <!--
     <script src="PushWooshNotification.js"></script>
     <script src="js/pushWooshHandler.js"></script>
     -->
     <!-- your app's js -->
     
-    <script src="./js/app.min-1ff9fab0be.js"></script>
+    <script src="./js/app.min-4ce70fde2d.js"></script>
 
     
   </body>
