--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
+    <scirpt src="lib/angular/angular.min.js"></scirpt>
     <script src="lib/angular-local-storage/angular-local-storage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -98,7 +99,7 @@
     -->
     <!-- your app's js -->
     
-    <script src="./js/app.min-5f5d5f0919.js"></script>
+    <script src="./js/app.min-092e43f497.js"></script>
 
     
   </body>
