--- a/js/home/home.html
+++ b/js/home/home.html
@@ -8,7 +8,11 @@
                 </div>
                 <div class="col col-center">
                     <div class="row" ng-repeat="day in days">
+                        <div class="homeDOW">{{day.name}}</div>
+                 
+                        <!--
                         <div class="col-50 text-left homeDOW">{{day.name}}</div>
+                        -->
                         <div class="col-25 text-right homeHours">{{day.start}}</div>
                         <div class="col-10 text-center homeHours">&dash;</div>
                         <div class="col-25 text-left homeHours">{{day.end}}</div>
