--- a/js/hours/hours.html
+++ b/js/hours/hours.html
@@ -8,7 +8,7 @@
                 <div class="col col-center">
                     <div class="row" ng-repeat="day in days">
                         <div class="col col-50 text-left hours-DOW">{{day.name}}</div>
-                        <div class="col col-25 text-right hours-Hours">{{day.start}}</div>
+                        <div class="col col-25 text-right hours-Hours">{{day.begin}}</div>
                         <div class="col col-10 text-center hours-Hours">&dash;</div>
                         <div class="col col-25 text-left hours-Hours">{{day.end}}</div>
                     </div>
